Return Id s in users/current for all models